Fri Aug 21 11:57:57 1998  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* src/gperf.cpp: Modified the main() program so that it doesn't
 	  print the starting time until AFTER we've parsed the arguments.

	* src/Version.cpp: Updated the version to 2.7 to reflect the
	  new changes.

	* src/Options.cpp (operator): Added a new -V option, which just
 	  exits with a value of 0.  This is useful for checking if gperf
 	  exists in the search path.  We use the feature in TAO.

	* src: Removed the globally overloaded new operator.  This was a
 	  portability pain and didn't really improve performance very
 	  much.

	* src/Options.cpp (operator): Fixed '%e' to be '%r' to come up to
 	  speed with ACE changes.

Sat Aug 15 07:59:58 1998  David L. Levine  <levine@cs.wustl.edu>

        * src/gperf.cpp (main): added ACE_UNUSED_ARGS for argc and
          argv if ! ACE_HAS_GPERF.

Fri Aug 14 13:47:00 1998  David L. Levine  <levine@cs.wustl.edu>

        * src/new.cpp (delete): aded ACE_UNUSED_ARG (ptr).

Fri Jul 31 18:28:45 1998  Gonzalo Diethelm  <gonzo@tango.cs.wustl.edu>

        * src/Bool_Array.cpp:
        * src/Gen_Perf.cpp:
        * src/Hash_Table.cpp:
        * src/Iterator.cpp:
        * src/Key_List.cpp:
        * src/List_Node.cpp:
        * src/Options.cpp:
        * src/Vectors.cpp:
        * src/Version.cpp:
        * src/gperf.cpp:
        * src/new.cpp:
        * tests/test.cpp:
        Added ACE_RCSID to these files.

Tue Jul 21 09:30:51 1998  David L. Levine  <levine@cs.wustl.edu>

        * src/gperf.cpp (main): added a trivial main () if ! ACE_HAS_GPERF,
          so that the link succeeds.

Mon Jul 20 16:02:18 1998  David L. Levine  <levine@cs.wustl.edu>

        * src/Makefile: fixed INSTALL.  It works with the latest
          $ACE_ROOT/include/makeinclude/rules.lib.GNU.

Mon Jul 20 15:35:59 1998  Alexander Babu Arulanthu  <alex@cs.wustl.edu>

        * Wrapped all the files with "#if defined (ACE_HAS_GPERF)" so that